--- a/com.restaurantProject/test-output/old/Default suite/classes.html
+++ b/com.restaurantProject/test-output/old/Default suite/classes.html
@@ -4,30 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>executeClasses.CustomersPageTestClass</td>
+<td>executeClasses.ProductPageTestClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTheAddcustomerButtonIsVisibleOrNot</td>
+<td>VerifyToAddaNewProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifytoSearchACustomerByUsingMobileNumber</td>
+<td>VerifySearchFunctionalityByUsingProductName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyThecustomerPageIsVisibleByClickingOncustomersunderPeopleTab</td>
+<td>VerifySearchFunctionalityByUsingProductCode</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifytoSearchACustomerByUsingName</td>
+<td>VerifyEditFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>veriytoAddaNewcustomer</td>
+<td>VerifyTheProductPageIsOpenedByClickingTheProductTab</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyDeleteFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
