--- a/com.restaurantProject/test-output/old/Default suite/methods-not-run.html
+++ b/com.restaurantProject/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>executeClasses.ProductPageTestClass.VerifySearchFunctionalityByUsingProductCode</td></tr>
+<tr><td>executeClasses.ProductPageTestClass.VerifyDeleteFunctionality</td></tr>
+<tr><td>executeClasses.ProductPageTestClass.VerifySearchFunctionalityByUsingProductName</td></tr>
+<tr><td>executeClasses.ProductPageTestClass.VerifyEditFunctionality</td></tr>
+<tr><td>executeClasses.ProductPageTestClass.VerifyTheProductPageIsOpenedByClickingTheProductTab</td></tr>
 </table>
